--- a/For Farah/index.html
+++ b/For Farah/index.html
@@ -19,8 +19,11 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Haloo Farahh
+      Selamat ulang tahun ya ^o^
+      Semoga sehat dan bahagia selalu
+      Wish you all the best<3`;
+      musik = `Musikal.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
